// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper events 1`] = `
<taro-swiper-core class="taro-swiper-6" id="taro-swiper-6" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="width: 0px;">
        <div style="height: 100%; background: green;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="width: 0px;">
        <div style="height: 100%; background: yellow;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="width: 0px;">
        <div style="height: 100%; background: green;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper props 1`] = `
<taro-swiper-core class="taro-swiper-0" id="taro-swiper-0" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper should autoplay 1`] = `
<taro-swiper-core class="taro-swiper-1" id="taro-swiper-1" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper should be circular 1`] = `
<taro-swiper-core class="taro-swiper-2" id="taro-swiper-2" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide swiper-slide-next" data-swiper-slide-index="2" style="width: 0px;">
        <div></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" data-swiper-slide-index="0" style="width: 0px;">
        <div></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" data-swiper-slide-index="1" style="width: 0px;">
        <div></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper should be vertical 1`] = `
<taro-swiper-core class="taro-swiper-3" id="taro-swiper-3" style="overflow: hidden; --swiper-container-mt: 0px; --swiper-container-mb: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-initialized swiper-vertical">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="height: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="height: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="height: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper should display multi items within screen width 1`] = `
<taro-swiper-core class="taro-swiper-5" id="taro-swiper-5" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 0px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;

exports[`Swiper should has previous margin 1`] = `
<taro-swiper-core class="taro-swiper-4" id="taro-swiper-4" style="overflow: hidden; --swiper-container-mr: 0px; --swiper-container-ml: 10px;">
  <!---->
  <div class="swiper-backface-hidden swiper-container swiper-horizontal swiper-initialized">
    <div class="swiper-wrapper" style="transition-duration: 0ms; transition-delay: 0ms; transform: translate3d(0px, 0px, 0px);">
      <taro-swiper-item-core class="swiper-slide" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-prev" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
      <taro-swiper-item-core class="swiper-slide swiper-slide-active" style="width: 0px;">
        <div style="height: 100%;"></div>
      </taro-swiper-item-core>
    </div>
  </div>
</taro-swiper-core>
`;
